--- a/aboutus.html
+++ b/aboutus.html
@@ -1,188 +1,208 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Qui somme nous ?</title>
-    <link rel="stylesheet" href="./asset/css/aboutus.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@500&family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@500&family=Open+Sans&display=swap"
+        rel="stylesheet">
+
+    <link rel="stylesheet" href="./asset/css/aboutus.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
-    <header>   
-            <div>
-                <a href="">
-                    <img src="asset/images/logo x150.png" alt="logo" class="logo" srcset="">
-                </a>
-            </div>
-            <nav>
-                <ul class="menu">
-                    <li><a href="">Acheter</a></li>
-                    <li><a href="">Louer</a></li>
-                    <li><a href="">Vendre</a></li>
-                    <li><a href="">Contact</a></li>
-                </ul>
-            </nav>
-            <div class="compte"><a href="">Mon compte</a></div>
+    <header>
+        <div>
+            <a href="">
+                <img src="asset/images/logo x150.png" alt="logo" class="logo" srcset="">
+            </a>
+        </div>
+        <nav>
+            <ul class="menu">
+                <li><a href="">Acheter</a></li>
+                <li><a href="">Louer</a></li>
+                <li><a href="">Vendre</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </nav>
+        <div class="compte">
+            <i class="fa-solid fa-user"></i>
+            <a href="">Mon compte</a>
+        </div>
     </header>
 
-<main>
+    <main>
 
-<section class="qsn">
-    <article>
-            <div class="rectangle-noir1">
-                <h1>
-                    Qui sommes nous ?
-                </h1>
+        <section class="qsn">
+            <article>
+                <div class="rectangle-noir1">
+                    <h1>
+                        Qui sommes nous ?
+                    </h1>
+                </div>
+                <div class="rectangle-noir2">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        laoreet et sem id ornare. Vivamus mauris augue,
+                        egestas id nisl ac, pulvinar tristique dui. Nam luctus eros nec
+                        elit scelerisque eleifend. Donec vestibulum tincidunt
+                        consectetur. Curabitur id enim diam. Sed mi diam, porttitor sit
+                        amet tincidunt ac, finibus ac tortor.</p>
+                </div>
+            </article>
+        </section>
+
+        <section class="mission">
+            <article>
+                <div class="rectangle-noir1">
+                    <h1>
+                        Notre mission
+                    </h1>
+                </div>
+                <div class="rectangle-noir2">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        laoreet et sem id ornare. Vivamus mauris augue,
+                        egestas id nisl ac, pulvinar tristique dui. Nam luctus eros nec
+                        elit scelerisque eleifend. Donec vestibulum tincidunt
+                        consectetur. Curabitur id enim diam. Sed mi diam, porttitor sit
+                        amet tincidunt ac, finibus ac tortor.</p>
+                </div>
+            </article>
+        </section>
+
+        <section class="équipe">
+            <article>
+                <div class="rectangle-noir1">
+                    <h1>
+                        Notre équipe
+                    </h1>
+                </div>
+                <div class="rectangle-noir2">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        laoreet et sem id ornare. Vivamus mauris augue,
+                        egestas id nisl ac, pulvinar tristique dui. Nam luctus eros nec
+                        elit scelerisque eleifend. Donec vestibulum tincidunt
+                        consectetur. Curabitur id enim diam. Sed mi diam, porttitor sit
+                        amet tincidunt ac, finibus ac tortor.</p>
+                </div>
+            </article>
+        </section>
+
+        <section class="valeurs">
+            <article>
+                <div class="rectangle-noir1">
+                    <h1>
+                        Nos valeurs
+                    </h1>
+                </div>
+                <div class="rectangle-noir2">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        laoreet et sem id ornare. Vivamus mauris augue,
+                        egestas id nisl ac, pulvinar tristique dui. Nam luctus eros nec
+                        elit scelerisque eleifend. Donec vestibulum tincidunt
+                        consectetur. Curabitur id enim diam. Sed mi diam, porttitor sit
+                        amet tincidunt ac, finibus ac tortor.</p>
+                </div>
+            </article>
+        </section>
+
+        <section class="pourquoi">
+            <article>
+                <div class="rectangle-noir3">
+                    <h1>
+                        Pourquoi choisir ACGDIMMO ?
+                    </h1>
+                </div>
+                <div class="rectangle-noir2">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        laoreet et sem id ornare. Vivamus mauris augue,
+                        egestas id nisl ac, pulvinar tristique dui. Nam luctus eros nec
+                        elit scelerisque eleifend. Donec vestibulum tincidunt
+                        consectetur. Curabitur id enim diam. Sed mi diam, porttitor sit
+                        amet tincidunt ac, finibus ac tortor.</p>
+                </div>
+            </article>
+        </section>
+
+        <article>
+            <div class="rectangle-vert">
+                <p class="p2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Sed viverra, lorem non placerat congue, erat nunc
+                    vulputate ligula !</p>
             </div>
-            <div class="rectangle-noir2">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br />
-                laoreet et sem id ornare. Vivamus mauris augue, <br />
-                egestas id nisl ac, pulvinar tristique dui. Nam luctus eros nec <br />
-                elit scelerisque eleifend. Donec vestibulum tincidunt <br /> 
-                consectetur. Curabitur id enim diam. Sed mi diam, porttitor sit <br /> 
-                amet tincidunt ac, finibus ac tortor.</p>
+        </article>
+
+    </main>
+
+    <footer>
+
+        <div class="colonnes">
+            <div class="c1">
+
+                <a href="">
+                    <img src="asset/images/logo_white_150.png" alt="logo blanc" class="logowhite" width="50%"
+                        height="100">
+                </a>
+                <p class="p3">Retrouvez-nous sur nos réseaux sociaux !</p>
+
+                <ul class="logos">
+                    <li><i class="fa-brands fa-facebook"></i></li>
+                    <li><i class="fa-brands fa-twitter"></i></li>
+                    <li><i class="fa-brands fa-instagram"></i></li>
+                </ul>
             </div>
-    </article>
-</section>
-
-<section class="mission">
-    <article>
-            <div class="rectangle-noir1">
-                <h1>
-                    Notre mission
-                </h1>
+            <div class="c1">
+                <h2>
+                    Services
+                </h2>
+                <ul class="listef">
+                    <li><a class="a2" href="">Achat</a></li>
+                    <li><a class="a2" href="">Vendre</a></li>
+                    <li><a class="a2" href="">Louer</a></li>
+                </ul>
             </div>
-            <div class="rectangle-noir2">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br />
-                laoreet et sem id ornare. Vivamus mauris augue, <br />
-                egestas id nisl ac, pulvinar tristique dui. Nam luctus eros nec <br />
-                elit scelerisque eleifend. Donec vestibulum tincidunt <br /> 
-                consectetur. Curabitur id enim diam. Sed mi diam, porttitor sit <br /> 
-                amet tincidunt ac, finibus ac tortor.</p>
+
+            <div class="c2">
+                <h2>
+                    Accès rapide
+                </h2>
+                <ul class="listef">
+                    <li><a class="a2" href="">Inscription Newsletter</a></li>
+                    <li><a class="a2" href="">Qui sommes-nous ?</a></li>
+                    <li><a class="a2" href="">Nos offres d'emploi</a></li>
+                    <li><a class="a2" href="">Avis client</a></li>
+                    <li><a class="a2" href="">Plan du site</a></li>
+                </ul>
             </div>
-    </article>
-</section>
 
-<section class="équipe">
-    <article>
-            <div class="rectangle-noir1">
-                <h1>
-                    Notre équipe
-                </h1>
+
+            <div class="c3">
+                <h2>
+                    Contact
+                </h2>
+                <ul class="listef">
+                    <li>06.08.16.45.22</li>
+                    <li>contact@acgdimmo.fr</li>
+                    <li>Saint-Junien</li>
+                </ul>
             </div>
-            <div class="rectangle-noir2">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br />
-                laoreet et sem id ornare. Vivamus mauris augue, <br />
-                egestas id nisl ac, pulvinar tristique dui. Nam luctus eros nec <br />
-                elit scelerisque eleifend. Donec vestibulum tincidunt <br /> 
-                consectetur. Curabitur id enim diam. Sed mi diam, porttitor sit <br /> 
-                amet tincidunt ac, finibus ac tortor.</p>
-            </div>
-    </article>
-</section>
-
-<section class="valeurs">
-    <article>
-            <div class="rectangle-noir1">
-                <h1>
-                    Nos valeurs
-                </h1>
-            </div>
-            <div class="rectangle-noir2">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br />
-                laoreet et sem id ornare. Vivamus mauris augue, <br />
-                egestas id nisl ac, pulvinar tristique dui. Nam luctus eros nec <br />
-                elit scelerisque eleifend. Donec vestibulum tincidunt <br /> 
-                consectetur. Curabitur id enim diam. Sed mi diam, porttitor sit <br /> 
-                amet tincidunt ac, finibus ac tortor.</p>
-            </div>
-    </article>
-</section>
-
-<section class="pourquoi">
-    <article>
-            <div class="rectangle-noir3">
-                <h1>
-                    Pourquoi choisir ACGDIMMO ?
-                </h1>
-            </div>
-            <div class="rectangle-noir2">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br />
-                laoreet et sem id ornare. Vivamus mauris augue, <br />
-                egestas id nisl ac, pulvinar tristique dui. Nam luctus eros nec <br />
-                elit scelerisque eleifend. Donec vestibulum tincidunt <br /> 
-                consectetur. Curabitur id enim diam. Sed mi diam, porttitor sit <br /> 
-                amet tincidunt ac, finibus ac tortor.</p>
-            </div>
-    </article>
-</section>
-
-<article>
-    <div class="rectangle-vert">
-        <p class="p2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br />
-        Sed viverra, lorem non placerat congue, erat nunc <br />
-        vulputate ligula !</p>
-    </div>
-</article>
-
-</main>
-
-<footer>
-
-    <div>
-        <p class="p3">Retrouvez-nous sur nos réseaux sociaux</p>
-    </div>
-
-    <div class="tout">
-
-        <div class="c1">
-            <h2>
-                Services
-            </h2>
-            <ul class="listef">
-                <li><a class="a2" href="">Achat</a></li>
-                <li><a class="a2" href="">Vendre</a></li>
-                <li><a class="a2" href="">Louer</a></li>
-            </ul>
         </div>
 
-        <div class="c2">
-            <h2>
-                Accès rapide
-            </h2>
-            <ul class="listef">
-                <li><a class="a2" href="">Inscription Newsletter</a></li>
-                <li><a class="a2" href="">Qui sommes-nous ?</a></li>
-                <li><a class="a2" href="">Nos offres d'emploi</a></li>
-                <li><a class="a2" href="">Avis client</a></li>
-                <li><a class="a2" href="">Plan du site</a></li>
-            </ul>
+
+        <div>
+            <p class="copyrigth">acgdimmo ©</p>
         </div>
 
-
-        <div class="c3">
-            <h2>
-                Contact
-            </h2>
-            <ul class="listef">
-                <li>06.08.16.45.22</li>
-                <li>contact@acgdimmo.fr</li>
-                <li>Saint-Junien</li>
-            </ul>
-        </div>
-    </div>
-
-
-    <div>
-        <p class="p4">acgdimmo ©</p>
-    </div>
-
-</footer>
-
+    </footer>
 </body>
+
 </html>
